--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,10 +23,8 @@ body {
 }
 
 
-
 /* *** Sign ************************************************************ *** */
 #sign {
-	display: none;
 	position:absolute;
 	width: auto;
 	height:auto;
@@ -273,9 +271,31 @@ input, textarea { width: 100% }
 }
 
 
+/* *** Message ********************************************************* *** */
+#message {
+	position: relative;
+	width: 100%;
+}
+
+#message p {
+	color: white;
+	border-radius: 10px;
+	padding: 10px;
+	width: 90%;
+	text-align: center;
+	margin: .5rem auto;
+}
+
+#message p.good {
+	background: rgb(149, 230, 95);
+}
+
+#message p.bad {
+	background: rgb(230, 95, 95);
+}
+
 /* *** Account ********************************************************* *** */
 #account {
-	/* display: none; */
   display: flex;
   justify-content: center;
 }
