--- a/frontend/style.css
+++ b/frontend/style.css
@@ -286,16 +286,11 @@ input, textarea { width: 100% }
 	margin: .5rem auto;
 }
 
-#message p.good {
-	background: rgb(149, 230, 95);
-}
-
-#message p.bad {
-	background: rgb(230, 95, 95);
-}
+#message .good { background: #95e65f }
+#message .bad  { background: #e65f5f }
 
 /* *** Account ********************************************************* *** */
-#account {
+#accountContainer {
   display: flex;
   justify-content: center;
 }
@@ -305,7 +300,7 @@ input, textarea { width: 100% }
 	height: 100%
 }
 
-#accountForm {
+#account {
   display: flex;
   flex-wrap: wrap;
 	width: 80%;
@@ -316,16 +311,15 @@ input, textarea { width: 100% }
 	border: 1px solid #ceeecf;
 }
 
-#accountForm .col-6, .col-12 {
+#account .col-6, .col-12 {
   display: flex;
   flex-direction: column;
-  margin: auto;
 }
 
-#accountForm .col-6 { width: 50% }
-#accountForm .col-12 { width: 100% }
+#account .col-6 { width: 50% }
+#account .col-12 { width: 100% }
 
-#accountForm input {
+#account input {
   height: 2rem;
   margin: 0.3rem 0;
 }
@@ -341,7 +335,7 @@ input, textarea { width: 100% }
   overflow: hidden;
 }
 
-#accountForm label {
+#account label {
   background: #5fca4a;
   font-size: 0.9rem;
   padding: 10px;
@@ -355,7 +349,7 @@ input, textarea { width: 100% }
   transition: all 0.2s;
 }
 
-#accountForm input[type="submit"] {
+#account input[type="submit"] {
   background: #5fca4a;
   font-size: 1rem;
 	vertical-align: middle;
@@ -369,17 +363,47 @@ input, textarea { width: 100% }
   transition: all 0.2s;
 }
 
-#accountForm input[type="submit"]:hover, #accountForm label:hover { background: #008800 }
+#account input[type="submit"]:hover, #account label:hover { background: #008800 }
 
-#accountForm input, textarea {
+#account input, textarea {
 	text-align: left;
 	padding-left: 10px;
 	color: #5fca4a;
 }
 
-#accountForm h2 {
+#account h2 {
 	color: #5fca4a;
 
+}
+
+#accountRead {
+	display: flex;
+	width: 100%;
+	flex-wrap: wrap;
+}
+
+#accountRead #avatar {
+	padding: 1rem;
+	border-radius: 30px;
+}
+
+#accountRead #info:first-child {
+	padding: 2rem 0;
+}
+
+#accountRead #info p {
+	padding: .5rem 0;
+	color: #17a02d;
+}
+
+#accountRead #info p span {
+	font-weight: bold;
+	color: #367e42;
+}
+
+
+#accountEdit {
+	display: none;
 }
 
 .btn {
